<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="action_map" translatable = "false">View</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable = "false">location</string>
    <string name="pref_location_default" translatable = "false">75070</string>
    <string name="pref_temperature_label">Temperature Units</string>
    <string name="pref_temperature_key" translatable = "false">temperature</string>
    <string name="pref_tempearture_default" translatable = "false">Metric</string>
    <string name="pref_unit_imperial" translatable = "false">Imperial</string>
    <array name="pref_temperature_entries" translatble = "false">
        <item name="metric" translatable = "false">Metric</item>
        <item name="imperial" translatable = "false">Imperial</item>
    </array>
    <array name="pref_temperature_values" translatble = "false">
        <item name="metric" translatable = "false">Metric</item>
        <item name="imperial" translatable = "false">Imperial</item>
    </array>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
<string name="format_full_friendly_date">
    <xliff:g id="day_of_week">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g>
</string>


    <!-- Strings for formatting weather-related data -->
    <!-- Temperature format [CHAR LIMIT=5] -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
<string name="format_wind_mph">
    Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
</string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
<string name="format_wind_kmh">
    Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
</string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.dev.com</string>
    <string name="content_authority">com.dev.ghazi.sunshine.app</string>

    <!-- Notification Format -->
<string name="format_notification">
Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
</string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>
    <!-- Empty string for empty database-->
    <string name="empty_string">No Weather Information Avaolable</string>

</resources>
